--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.321.0",
     "next": "^14.1.0",
+    "next-video": "^0.16.0",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
