--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/archivo-black": "^5.0.19",
     "@fontsource/poppins": "^5.0.12",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-separator": "^1.0.3",
